
4 September 2017


1. Introduction
---------------
This document briefly summarizes module by module the most important changes
made since the last release of GammaLib.


2. Public interface modifications
---------------------------------
The following classes have been added:
- GCOMD1Response
- GCOMD2Response
- GCOMInstChars
- GCOMIaq
- GCOMRoi
- GCOMEventAtom
- GCOMEventList
- GCOMTim

The following classes have been removed:
- n.a.

The following classes have been renamed:
- n.a.

The following methods have been added:
- GTime(std::string&)
- GTime(std::string&, GTimeReference&)
- GTime::set(std::string&)
- GTime::set(std::string&, GTimeReference&)
- GApplicationPar::time(GTimeReference&)
- GApplicationPar::time(GTime&)
- GModelSpectralNodes(GModelSpectral&, GEnergies&)
- GFitsTableCol::scale(double&, double&)
- GCOMInstDir(GSkyDir&, double&)

The following methods have been removed:
- n.a.

The following methods have been renamed:
- n.a.

The arguments for the following methods have been changed:
- GCOMResponse(GCaldb&, std::string&)
- GCOMObservation::response(GCaldb&, std::string&)

The return value of the following methods has been changed:
- n.a.


3. Configuration
-----------------
A code generator script codegen.py has been added to the dev folder to ease
the addition of code extensions to GammaLib.


4. Application module
---------------------
A time parameter with type "t" has was to allow specifying time values in
various formats to time systems to an application. Methods were added to set
and retrieve the time value (#1864).


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
The GFitsTableCol::scale() method has been added to allow setting the
TSCALE and TZERO values before reading the column data. The keywords
that may exist in the FITS file are not affected by the setting (#2191).


7. Linear algebra module
------------------------
None


8. Model module
---------------