@@ -35,6 +35,7 @@ INCLUDES = -I$(top_srcdir)/include \
 
 # Define sources for this directory
 sources = src/GCOMSupport.cpp \
+          src/GCOMDri.cpp \
           src/GCOMOads.cpp \
           src/GCOMOad.cpp \
           src/GCOMTim.cpp \
@@ -54,6 +55,7 @@ sources = src/GCOMSupport.cpp \
 
 # Define headers to be installed
 pkginclude_HEADERS = include/GCOMEventCube.hpp \
+                     include/GCOMDri.hpp \
                      include/GCOMOads.hpp \
                      include/GCOMOad.hpp \
                      include/GCOMTim.hpp \
